integration_tests/tests/integration_tests/snapshots/integration_tests__show_fungible_flag_tests__get_asset_with_show_fungible_scenario_4.snap
---
source: integration_tests/tests/integration_tests/show_fungible_flag_tests.rs
expression: response
---
{
  "interface": "FungibleToken",
  "id": "J1toso1uCk3RLmjorhTtrVwY9HJ7X8V9yYac6Y7kGCPn",
  "content": {
    "$schema": "https://schema.metaplex.com/nft1.0.json",
    "json_uri": "https://storage.googleapis.com/token-metadata/JitoSOL.json",
    "files": [],
    "metadata": {
      "name": "Jito Staked SOL",
      "symbol": "JitoSOL",
      "token_standard": "Fungible"
    },
    "links": {}
  },
  "authorities": [
    {
      "address": "EDGARWktv3nDxRYjufjdbZmryqGXceaFPoPpbUzdpqED",
      "scopes": [
        "full"
      ]
    }
  ],
  "compression": {
    "eligible": false,
    "compressed": false,
    "data_hash": "",
    "creator_hash": "",
    "asset_hash": "",
    "tree": "",
    "seq": 0,
    "leaf_id": 0
  },
  "grouping": [],
  "royalty": {
    "royalty_model": "creators",
    "target": null,
    "percent": 0.0,
    "basis_points": 0,
    "primary_sale_happened": false,
    "locked": false
  },
  "creators": [],
  "ownership": {
    "frozen": false,
    "delegated": false,
    "delegate": null,
    "ownership_model": "token",
    "owner": ""
  },
  "mutable": true,
  "burnt": false,
  "token_info": {
    "supply": 12585937222711072,
    "decimals": 9,
    "token_program": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA",
    "mint_authority": "6iQKfEyhr3bZMotVkW6beNZz5CPAkiwvgV2CTje9pVSS"
  }
}
